8025962: JSR 292: NoSuchMethodError and NoSuchFieldError in MHN_resolve_Mem

Reviewed-by: acorn, kvn